--- a/catalog.html
+++ b/catalog.html
@@ -467,7 +467,7 @@
                 <div class="pages">
                     <a href="#">❮</a>
                     <a href="#" class="active">1</a>
-                    <a class="active" href="#">2</a>
+                    <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
