--- a/catalog.html
+++ b/catalog.html
@@ -99,7 +99,7 @@
             <nav>
                 <ul class="header-bottom-container-breadcrumb">
                     <li class="header-bottom-container-breadcrumb-item">
-                        <a href="#">
+                        <a href="index.html">
                             Home
                         </a>
                     </li>
