--- a/catalog.html
+++ b/catalog.html
@@ -525,7 +525,7 @@
                     </div>
                     <form action="#" class="subscribe-container-input-form">
                         <input type="email" name="email" id="email-form" placeholder="Enter Your Email"
-                            class="subscribe-container-input-form-mail">
+                            class="subscribe-container-input-form-mail" required pattern="/^[A-Z0-9._%+-]+@[A-Z0-9-]+.+.[A-Z]{2,4}$/i">
                         <input type="submit" value="Subscribe" class="subscribe-container-input-form-button">
                     </form>
                 </div>
