--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>THE BRAND OF LUXERIOUS FASHION-Catalog</title>
 </head>
 
@@ -97,7 +97,6 @@
     <header class="header-bottom">
         <div class="header-bottom-container container">
             <h1 class="header-bottom-container-title">New arrivals</h1>
-            <nav>
                 <ul class="header-bottom-container-breadcrumb">
                     <li class="header-bottom-container-breadcrumb-item">
                         <a href="index.html">
@@ -113,7 +112,6 @@
                         New arrivals
                     </li>
                 </ul>
-            </nav>
         </div>
     </header>
     <main>
