--- a/product.html
+++ b/product.html
@@ -97,6 +97,7 @@
     <header class="header-bottom">
         <div class="header-bottom-container container">
             <h2 class="header-bottom-container-title">New arrivals</h2>
+            <nav>
                 <ul class="header-bottom-container-breadcrumb">
                     <li class="header-bottom-container-breadcrumb-item">
                         <a href="index.html">
@@ -112,6 +113,7 @@
                         New arrivals
                     </li>
                 </ul>
+            </nav>
         </div>
     </header>
     <main>
@@ -160,14 +162,34 @@
                                                 d="M5.00214 5.64846C4.83521 5.64879 4.67343 5.59016 4.54488 5.48275L0.258102 1.88021C0.112196 1.75791 0.0204417 1.58217 0.00302325 1.39165C-0.0143952 1.20112 0.0439493 1.01143 0.165221 0.864289C0.286493 0.717149 0.460759 0.624619 0.649682 0.607053C0.838605 0.589487 1.02671 0.648325 1.17262 0.770623L5.00214 3.9985L8.83167 0.885905C8.90475 0.826055 8.98884 0.781361 9.0791 0.754391C9.16937 0.727421 9.26403 0.718707 9.35764 0.72875C9.45126 0.738794 9.54198 0.767396 9.6246 0.812913C9.70722 0.85843 9.7801 0.919965 9.83906 0.993981C9.90449 1.06806 9.95405 1.15498 9.98462 1.24927C10.0152 1.34357 10.0261 1.44321 10.0167 1.54197C10.0073 1.64073 9.97784 1.73646 9.93005 1.82318C9.88227 1.9099 9.81723 1.98573 9.73904 2.04592L5.45225 5.52598C5.32002 5.61641 5.16154 5.65954 5.00214 5.64846Z" />
                                         </svg></button>
                                 </li>
-                                <li class="product-container-description-bottom-choose-item"><button
-                                        class="product-container-description-bottom-choose-item-btn">Choose
-                                        size
+                                <li class="product-container-description-bottom-choose-item">
+                                    <input type="checkbox" id="size-list">
+                                    <label class="product-container-description-bottom-choose-item-btn size-button"
+                                        for="size-list">Choose size
                                         <svg width="11" height="6" viewBox="0 0 11 6"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
                                                 d="M5.00214 5.64846C4.83521 5.64879 4.67343 5.59016 4.54488 5.48275L0.258102 1.88021C0.112196 1.75791 0.0204417 1.58217 0.00302325 1.39165C-0.0143952 1.20112 0.0439493 1.01143 0.165221 0.864289C0.286493 0.717149 0.460759 0.624619 0.649682 0.607053C0.838605 0.589487 1.02671 0.648325 1.17262 0.770623L5.00214 3.9985L8.83167 0.885905C8.90475 0.826055 8.98884 0.781361 9.0791 0.754391C9.16937 0.727421 9.26403 0.718707 9.35764 0.72875C9.45126 0.738794 9.54198 0.767396 9.6246 0.812913C9.70722 0.85843 9.7801 0.919965 9.83906 0.993981C9.90449 1.06806 9.95405 1.15498 9.98462 1.24927C10.0152 1.34357 10.0261 1.44321 10.0167 1.54197C10.0073 1.64073 9.97784 1.73646 9.93005 1.82318C9.88227 1.9099 9.81723 1.98573 9.73904 2.04592L5.45225 5.52598C5.32002 5.61641 5.16154 5.65954 5.00214 5.64846Z" />
-                                        </svg></button>
+                                        </svg>
+                                    </label>
+                                    <form action="#" method="get" class="size-block">
+                                        <div class="container-input-size">
+                                            <input type="checkbox" id="xs">
+                                            <label for="xs" class="size-title size-title-xs">xs</label>
+                                        </div>
+                                        <div class="container-input-size">
+                                            <input type="checkbox" id="s">
+                                            <label for="s" class="size-title size-title-s">s</label>
+                                        </div>
+                                        <div class="container-input-size">
+                                            <input type="checkbox" id="m">
+                                            <label for="m" class="size-title size-title-m">m</label>
+                                        </div>
+                                        <div class="container-input-size">
+                                            <input type="checkbox" id="l">
+                                            <label for="l" class="size-title size-title-l">l</label>
+                                        </div>
+                                    </form>
                                 </li>
                                 <li class="product-container-description-bottom-choose-item"><button
                                         class="product-container-description-bottom-choose-item-btn">Quanity
