--- a/registration.html
+++ b/registration.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Shopping Cart</title>
+    <title>Registration</title>
 </head>
 
 <body>
@@ -96,85 +95,61 @@
     </header>
     <div class="header-bottom">
         <div class="header-bottom-container container">
-            <h1 class="header-bottom-container-title">Shopping cart</h1>
+            <h1 class="header-bottom-container-title">Registration</h1>
         </div>
     </div>
     <main>
-        <section class="cart">
-            <div class="cart__container container">
-                <div class="cart__container__productbox">
-                    <div class="cart__container__productbox__products">
-                        <input type="checkbox" id="delete-card-all">
-                        <input type="checkbox" id="delete-card-1">
-                        <input type="checkbox" id="delete-card-2">
-                        <article class="cart__container__productbox__products__card card-1">
-                            <img src="img/cart-1.png" alt="mango people t-shirt">
-                            <div class="cart__container__productbox__products__card__desc">
-                                <div class="cart__container__productbox__products__card__desc__content">
-                                    <h3>Mango people t&#8209;shirt</h3>
-                                    <ul class="cart__container__productbox__products__card__desc__content__options">
-                                        <li>Price: <span class="pink-text">$300</span></li>
-                                        <li>Color: red</li>
-                                        <li>Size: xl</li>
-                                        <li>
-                                            <label for="quantity-1">Quantity:</label>
-                                            <input type="number" id="quantity-1" class="quantity-number" min="0"
-                                                autocomplete="off" value="" required>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <label class="delete-card" for="delete-card-1"></label>
-                            </div>
-                        </article>
-                        <article class="cart__container__productbox__products__card card-2">
-                            <img src="img/cart-2.png" alt="mango people t-shirt">
-                            <div class="cart__container__productbox__products__card__desc">
-                                <div class="cart__container__productbox__products__card__desc__content">
-                                    <h3>Mango people t&#8209;shirt</h3>
-                                    <ul class="cart__container__productbox__products__card__desc__content__options">
-                                        <li>Price: <span class="pink-text">$300</span></li>
-                                        <li>Color: red</li>
-                                        <li>Size: xl</li>
-                                        <li>
-                                            <label for="quantity-2">Quantity:</label>
-                                            <input type="number" id="quantity-2" class="quantity-number" min="0"
-                                                autocomplete="off" value="" required>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <label class="delete-card" for="delete-card-2"></label>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="cart__container__productbox__buttonbox">
-                        <label for="delete-card-all"
-                            class="cart__container__productbox__buttonbox__del-button btn-cart">Clear
-                            shopping cart</label>
-                        <button name="continue" class="btn-cart">Continue shopping</button>
-                    </div>
-                </div>
-                <form action="#" method="post" class="cart__container__formbox">
-                    <fieldset class="cart__container__formbox__adressbox">
-                        <legend>Shipping adress</legend>
-                        <input type="text" placeholder="bangladesh" id="country" required>
-                        <input type="text" placeholder="state" id="state" required>
-                        <input type="number" placeholder="postcode / zip" id="zip">
-                        <input type="checkbox" id="textarea-open">
-                        <label for="textarea-open">Get a quote</label>
-                        <textarea name="get-a-quote" id="quote" cols="48" rows="10"></textarea>
-                    </fieldset>
-                    <fieldset class="cart__container__formbox__checkout">
-                        <div class="cart__container__formbox__checkout__subtotal">
-                            <span>Sub total</span><span>900$</span>
+        <section class="registration">
+            <div class="registration__container container">
+                <form action="#" method="post" class="registration__container__form">
+                    <fieldset class="registration__container__form__name">
+                        <legend>Your name</legend>
+                        <input type="text" name="user-firstname" id="first-name" placeholder="first name" required>
+                        <input type="text" name="user-lastname" id="last-name" placeholder="last name" required>
+                        <div class="registration__container__form__name__gender">
+                            <input type="radio" name="gender" value="male" id="male">
+                            <label for="male" class="g-label">Male</label>
+                            <input type="radio" name="gender" value="female" id="female">
+                            <label for="female" class="g-label">Female</label>
                         </div>
-                        <div class="cart__container__formbox__checkout__grandtotal">
-                            <span>Grand total</span><span class="pink-text pink-text--bold">900$</span>
-                        </div>
-                        <hr>
-                        <button type="submit" class="cart__container__formbox__checkout__button">Proceed
-                            to&nbsp;checkout</button>
                     </fieldset>
+                    <fieldset class="registration__container__form__login">
+                        <legend>Login details</legend>
+                        <input type="email" name="usermail" id="user-email" placeholder="Email" required
+                            pattern="/^[A-Z0-9._%+-]+@[A-Z0-9-]+.+.[A-Z]{2,4}$/i">
+                        <input type="password" name="userpass" id="user-pass" placeholder="Password" required
+                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,15}$">
+                        <p class="registration__container__form__login__txt">Please use 8 or more characters, with at
+                            least 1
+                            number and a mixture of uppercase and lowercase letters</p>
+                    </fieldset>
+                    <button type="submit" class="registration__container__form__btn">Join now
+                        <svg width="17" height="10" viewBox="0 0 17 10" xmlns="http://www.w3.org/2000/svg">
+                            <path clip-rule="evenodd"
+                                d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z" />
+                            <path clip-rule="evenodd"
+                                d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z" />
+                        </svg>
+                    </button>
                 </form>
+                <div class="registration__container__loyalty">
+                    <h2>loyalty has its perks</h2>
+                    <p class="registration__container__loyalty__txt">Get in on the loyalty program where you can earn
+                        points and unlock serious perks. Starting with
+                        these as soon as you join:</p>
+                    <ul class="registration__container__loyalty__list">
+                        <li class="registration__container__loyalty__list__item">15% off welcome offer
+                        </li>
+                        <li class="registration__container__loyalty__list__item">Free shipping, returns and exchanges on
+                            all
+                            orders
+                        </li>
+                        <li class="registration__container__loyalty__list__item">$10 off a purchase on your birthday
+                        </li>
+                        <li class="registration__container__loyalty__list__item">Early access to products</li>
+                        <li class="registration__container__loyalty__list__item">Exclusive offers & rewards</li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="subscribe">
