--- a/cart.html
+++ b/cart.html
@@ -104,11 +104,9 @@
             <div class="cart__container container">
                 <div class="cart__container__productbox">
                     <div class="cart__container__productbox__products">
-                        <input type="checkbox" id="delete-card-all">
-                        <input type="checkbox" id="delete-card-1">
-                        <input type="checkbox" id="delete-card-2">
                         <article class="cart__container__productbox__products__card card-1">
-                            <img src="img/cart-1.png" alt="mango people t-shirt">
+                            <div class="cart__container__productbox__products__card__img"><img src="img/cart-1.png"
+                                    alt="mango people t-shirt"></div>
                             <div class="cart__container__productbox__products__card__desc">
                                 <div class="cart__container__productbox__products__card__desc__content">
                                     <h3>Mango people t&#8209;shirt</h3>
@@ -123,7 +121,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <label class="delete-card" for="delete-card-1"></label>
+                                <button class="delete-card"></button>
                             </div>
                         </article>
                         <article class="cart__container__productbox__products__card card-2">
@@ -142,14 +140,13 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <label class="delete-card" for="delete-card-2"></label>
+                                <button class="delete-card"></button>
                             </div>
                         </article>
                     </div>
                     <div class="cart__container__productbox__buttonbox">
-                        <label for="delete-card-all"
-                            class="cart__container__productbox__buttonbox__del-button btn-cart">Clear
-                            shopping cart</label>
+                        <button class="cart__container__productbox__buttonbox__del-button btn-cart">Clear
+                            shopping cart</button>
                         <button name="continue" class="btn-cart">Continue shopping</button>
                     </div>
                 </div>
