--- a/cart.html
+++ b/cart.html
@@ -125,7 +125,8 @@
                             </div>
                         </article>
                         <article class="cart__container__productbox__products__card card-2">
-                            <img src="img/cart-2.png" alt="mango people t-shirt">
+                            <div class="cart__container__productbox__products__card__img"><img src="img/cart-2.png"
+                                    alt="mango people t-shirt"></div>
                             <div class="cart__container__productbox__products__card__desc">
                                 <div class="cart__container__productbox__products__card__desc__content">
                                     <h3>Mango people t&#8209;shirt</h3>
